# schlam

./: .gitignore  .gitmodules  README.md  pyproject.toml
schlam/: feature_detector.py  feature_detectors.py  helpers.py  imu_calc.py  kitti_odometry_dataset.py  local_bundle_adjustment.py  main.py  matcher.py  optical_flow.py  ransac.py  visualizer.py
schlam/cpp/: .nvim-dap.lua  CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
schlam/cpp/src/: main.cpp  utils.hpp
schlam/cpp/src/data/: gt_data.cpp  gt_data.hpp  image_data.cpp  image_data.hpp  imu_data.cpp  imu_data.hpp  mav_dataloader.cpp  mav_dataloader.hpp
schlam/cpp/src/plotting/: plotter.cpp  plotter.hpp
schlam/cpp/src/schlam/: FastFeatureDetector.cpp  FastFeatureDetector.h  Frame.cpp  Frame.h  IFeatureDescriptor.h  KeyPoint.cpp  KeyPoint.h  Matcher.cpp  Matcher.h  ORBFeatureDetector.cpp  ORBFeatureDetector.h  Optimizer.cpp  Optimizer.h  QuadTreeNode.cpp  QuadTreeNode.h  Ransac.cpp  Ransac.h  orb_pattern.h  utils.cpp  utils.h
schlam/cpp/src/tft/: coordinate_frame.cpp  coordinate_frame.hpp  main.cpp  rigid_transform_3d.cpp  rigid_transform_3d.hpp  transform.cpp  transform.hpp  transformable_3d.cpp  transformable_3d.hpp  transformer.cpp  transformer.hpp
schlam/cpp/tests/: test_ransac.cpp
schlam/python/: feature_detectors.py  helpers.py  main.py  matcher.py  mav_dataset_parser.py  orb_descriptor_pattern.py  pyproject.toml  ransac.py  util.py
