[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "baldhat",email = "michel.jonathan@proton.me"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "pykitti (>=0.3.1,<0.4.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "open3d (>=0.19.0,<0.20.0)",
    "pyceres (>=2.4,<3.0)",
    "pyqtgraph (>=0.13.7,<0.14.0)",
    "pyqt5 (>=5.15.11,<6.0.0)",
    "pyopengl (>=3.1.9,<4.0.0)",
    "rendering (>=0.0.0,<0.0.1)",
    "transforms3d (>=0.4.2,<0.5.0)",
    "numpy (==1.26.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
